@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load i18n %}
+{% load i18n utils %}
 
 {% block title %} {{ favourite.title }} | I'm TualatriX {% endblock %}
 
@@ -16,19 +16,21 @@
 
 		<p>
 		{% if favourite.link %}
-		<b>Read more:<a href="{{ favourite.link }}">{{ favourite.link }}</a></b>
+		<b>Read more: <a href="{{ favourite.link }}">{{ favourite.link }}</a></b>
 		{% endif %}
 		{% if favourite.get_tags %}
 		<div id="tags">Tags: {% for tag in favourite.get_tags %}{% if forloop.last %}<a href="{{ tag.get_absolute_url }}">{{ tag.name }}</a>. {% else %}<a href="{{ tag.get_absolute_url }}">{{ tag.name }}</a>, {% endif %}{% endfor %}</div>
 		{% endif %}
 		</p>
         <p class="meta"> 
-        {% if favourite.enable_comment %}
         <small> &raquo; <a href="#comments">{% trans "You can leave a comment." %}</a></small>
-        {% else %}
-        <small> &raquo; {% trans "Comments are currently closed." %}</a></small>
-        {% endif %}
         </p>
 	</div>
 </div>
 {% endblock %}
+
+{% block comment %}
+	{% var object = favourite %}
+	{% include "comment/comment.html" %}
+{% endblock %}
+
